# Setch

./: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  Cargo.toml.orig  Modules.md  README.md
src/: ascii.rs  cache.rs  main.rs  presets.rs  setchd.rs
